--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^0.1.4",
     "@stitches/react": "^1.2.6",
     "next": "latest",
+    "next-auth": "^4.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
