--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "next": "latest",
     "next-auth": "^4.10.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "@types/node": "^18.0.6",
