--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@radix-ui/react-avatar": "^0.1.4",
     "@stitches/react": "^1.2.6",
+    "axios": "^0.27.2",
     "next": "latest",
     "next-auth": "^4.10.0",
     "react": "^17.0.2",
