--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "next-auth": "^4.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "react-spinners-kit": "^1.9.1",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@types/node": "^18.0.6",
