--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^0.1.4",
+    "@radix-ui/react-tabs": "^1.0.0",
     "@stitches/react": "^1.2.6",
     "axios": "^0.27.2",
     "next": "latest",
@@ -15,7 +16,8 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.4.0",
     "react-spinners-kit": "^1.9.1",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "^18.0.6",
