--- a/package.json
+++ b/package.json
@@ -6,11 +6,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "@radix-ui/react-avatar": "^0.1.4",
-    "@radix-ui/react-tabs": "^1.0.0",
-    "@stitches/react": "^1.2.6",
+    "@types/styled-components": "^5.1.25",
     "axios": "^0.27.2",
-    "next": "latest",
+    "next": "12.2.0",
     "next-auth": "^4.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -20,8 +18,11 @@
     "swr": "^1.3.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.9",
+    "@babel/preset-typescript": "^7.18.6",
     "@types/node": "^18.0.6",
     "@types/react": "^18.0.15",
+    "babel-plugin-styled-components": "^2.0.7",
     "typescript": "^4.7.4"
   }
 }
