--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@types/styled-components": "^5.1.25",
     "axios": "^0.27.2",
+    "date-fns": "^2.29.1",
     "next": "12.2.0",
     "next-auth": "^4.10.0",
     "rc-tooltip": "^5.2.2",
