--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "date-fns": "^2.29.1",
     "next": "12.2.0",
     "next-auth": "^4.10.0",
+    "nextjs-progressbar": "^0.0.14",
     "rc-tooltip": "^5.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
