--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@types/styled-components": "^5.1.25",
     "axios": "^0.27.2",
     "date-fns": "^2.29.1",
-    "next": "12.2.0",
+    "next": "^12.2.3",
     "next-auth": "^4.10.0",
     "nextjs-progressbar": "^0.0.14",
     "rc-tooltip": "^5.2.2",
