--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "^12.2.3",
     "next-auth": "^4.10.0",
     "nextjs-progressbar": "^0.0.14",
+    "rc-slider": "^10.0.1",
     "rc-tooltip": "^5.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
