--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.4.0",
+    "react-query": "^3.39.2",
     "react-spinners-kit": "^1.9.1",
     "styled-components": "^5.3.5",
     "swr": "^1.3.0"
