--- a/package.json
+++ b/package.json
@@ -6,18 +6,21 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/aos": "^3.0.4",
     "@types/styled-components": "^5.1.25",
+    "aos": "^3.0.0-beta.6",
     "axios": "^0.27.2",
     "date-fns": "^2.29.1",
-    "next": "^12.2.3",
+    "next": "^12.2.5",
     "next-auth": "^4.10.0",
     "nextjs-progressbar": "^0.0.14",
     "rc-slider": "^10.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-query": "^3.39.2",
     "react-spinners-kit": "^1.9.1",
+    "sharp": "^0.30.7",
     "styled-components": "^5.3.5",
     "swr": "^1.3.0"
   },
